--- a/templates/layout.html
+++ b/templates/layout.html
@@ -74,5 +74,24 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <div class="footer">
+	   <p></p>
+	   <!--<p><b><u><a href="contact.html">Contact Pranoy now!</a></b></u></p>-->
+	   <p><center>© Copyright 2020 Alankar - All Rights Reserved</center></p>
+	   <p></p>
+	</div> 
+    <!--<footer>
+    	<center>© Copyright 2020 Alankar - All Rights Reserved</center>
+    </footer>-->
+    <!--<section once="footers" class="cid-rzvQMfc2s9" id="footer6-1q">
+	    <div class="container">
+	        <div class="media-container-row align-center mbr-white">
+	            <div class="col-12">
+	                <p class="mbr-text mb-0 mbr-fonts-style display-7">
+	                    <center>© Copyright 2020 Alankar - All Rights Reserved</center></p>
+	            </div>
+	        </div>
+	    </div>
+	</section>-->
 </body>
 </html>
