--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,12 +11,39 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
+    
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.css" rel="stylesheet" />    
+    
+    <!--Usage of the Reset Button-->
+    <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+    <script>
+
+      $(document).ready(function(){
         
+        //$(".check").click(function(){
+
+          //$("#unchk").prop("checked", true);
+
+        //});
+        
+        $(".uncheck").click(function(){
+          console.log("Uncheck button clicked");
+          //$("#unchk").prop("checked", false);
+          $('input[type=checkbox]').prop('checked',false);
+        });
+      
+      });
+      
+    </script>
+    
     <!-- Periodic Table -->
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <!--<script src="./static/activate_element.js">//</script>-->
