--- a/templates/layout.html
+++ b/templates/layout.html
@@ -22,7 +22,7 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.css" rel="stylesheet" />    
     
-    <!--Usage of the Reset Button-->
+    <!--Usage of the Reset Button (re-enable and uncheck all)-->
     <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
     <script>
 
@@ -35,10 +35,14 @@
         //});
         
         $(".uncheck").click(function(){
-          console.log("Uncheck button clicked");
+          console.log("Reset button clicked");
           //$("#unchk").prop("checked", false);
+          //document.getElementById('unchk').disabled=false;
+          $('input[type=checkbox]').prop('disabled',false);
           $('input[type=checkbox]').prop('checked',false);
         });
+
+        
       
       });
       
