--- a/templates/layout.html
+++ b/templates/layout.html
@@ -40,6 +40,7 @@
           //document.getElementById('unchk').disabled=false;
           $('input[type=checkbox]').prop('disabled',false);
           $('input[type=checkbox]').prop('checked',false);
+          $('#result').html("<strong>Please Cite Our Work!</strong> <br>The result will be displayed here");
         });
 
         
