--- a/templates/data.html
+++ b/templates/data.html
@@ -309,16 +309,37 @@
 		    </tr>
 		  </tbody>
 		</table>
-		<br>
-		
+		<hr>
+		<center>
+			
+			
+
+			<!--We will display our result over-->
+			<!--This is called a BOOTSRAP alert-->
+			
+		<div class="alert alert-success">
+				<div id="result">
+					<strong>Please Cite Our Work!</strong> <br>The result will be displayed here
+				</div>
+
+			  </div>
+
+		</center>
+		<!-- <input type="button" value="RESET" id="myCheck" class="uncheck">
+		<label for="lname">Result</label><br>
+  		<input type="text" id="lname" name="lname" value=""><br><br>
+  		<input type="reset" value="Reset">
+		 -->
+		<hr>
 		<center>
 			
 		<div id="wrapper">
 			<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 			<script src="https://cdn.jsdelivr.net/npm/sweetalert"></script>
-			<button class="btn btn-success" id="button-a" onlick="popup()" style="margin:5px;">Submit</button><emsp>
+			<!--<button class="btn btn-success" id="button-a" onlick="popup()" style="margin:5px;">Submit</button><emsp>-->
 			<button class="uncheck btn btn-danger" type="button" style="margin:5px;">Reset</button>
 		</div>
+		<hr>
 			<script src="/static/alert.js">
 			//$('#button-a').click(function(){
 			//	function popup(){
@@ -350,28 +371,7 @@
 				//}//
 			</script>
 		</center>
-		<hr>
-		<center>
-			
-			
 
-			<!--We will display our result over-->
-			<!--This is called a BOOTSRAP alert-->
-			
-		<div class="alert alert-success">
-				<div id="result">
-					<strong>Please Cite Our Work!</strong> <br>The result will be displayed here
-				</div>
-
-			  </div>
-
-		</center>
-		<!-- <input type="button" value="RESET" id="myCheck" class="uncheck">
-		<label for="lname">Result</label><br>
-  		<input type="text" id="lname" name="lname" value=""><br><br>
-  		<input type="reset" value="Reset">
-		 -->
-		<hr>
 		<h2>Alloy, Compound, Coarse-Grained and Fictional Data</h2>
 		<p>
 		  The following is a list of all of the multi-element systems and non-elemental materials that we
