--- a/templates/data.html
+++ b/templates/data.html
@@ -336,8 +336,10 @@
 		<div id="wrapper">
 			<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 			<script src="https://cdn.jsdelivr.net/npm/sweetalert"></script>
+			
 			<!--<button class="btn btn-success" id="button-a" onlick="popup()" style="margin:5px;">Submit</button><emsp>-->
-			<button class="uncheck btn btn-danger" type="button" style="margin:5px;">Reset</button>
+			<button class="uncheck btn btn-danger" type="button" style="margin:5px;">Reset</button><br>
+			<input type="button" class="btn btn-success" onclick="location.href='https://doi.org/10.1016/j.mtla.2019.100435';" value="Cite Us" />
 		</div>
 		<hr>
 			<script src="/static/alert.js">
