--- a/templates/data.html
+++ b/templates/data.html
@@ -12,20 +12,65 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
 
+
+
 <!--Function for Max 3 checkboxes can be selected-->
 <script>		
 		function check(val1) {
 			var chk_arr =  document.getElementsByName("chk");
 			var chklength = chk_arr.length;   
-			console.log("Checkbox has been acquired");          
+			console.log("2 element Checkbox");          
 			var tot = 0;
 			var i = 0;
 			var data = "";
 			for(k=0;k< chklength;k++) {
-
-				if (tot > 2) { 
+				if (tot ==2 ) { 
 					//chk_arr[i].checked = false; 
 					console.log("Checkbox limit exceeded"); 
+
+
+					//var categories = $('#off');
+					
+					//  categories.prop('disabled', !categories.prop('disabled'));
+					  
+					  //$('#mainChk').on('click', function(){
+					//var off = $('.off');
+					//off.prop('disabled', !off.prop('disabled'));
+        //});
+
+
+					//document.getElementsByName("chk").disabled = true;
+					console.log(data)
+					$.ajax({
+					type : 'POST',
+					url : "{{url_for('process')}}",
+					data : {'data' : data},
+					
+					success: function(data) {
+					
+						//console.log(data) 
+						json=JSON.parse(data);
+						console.log(json)
+						$('#result').html(json['sum']);
+
+
+					}
+					});
+					
+				}
+				if (tot > 2) { 
+
+					$(".uncheck").click(function(){
+					console.log("Reset button clicked");
+					//$("#unchk").prop("checked", false);
+					//document.getElementById('unchk').disabled=false;
+					//$('input[type=checkbox]').prop('disabled',false);
+					//$('input[type=checkbox]').prop('checked',false);
+					$('#result').html("<strong>Please Cite Our Work!</strong> <br>The result will be displayed here");
+					
+					//chk_arr[i].checked = false; 
+					console.log("3 element Checkbox"); 
+					});
 
 
 					var categories = $('#off');
@@ -42,7 +87,7 @@
 					console.log(data)
 					$.ajax({
 					type : 'POST',
-					url : "{{url_for('process')}}",
+					url : "{{url_for('process2')}}",
 					data : {'data' : data},
 					
 					success: function(data) {
@@ -66,6 +111,8 @@
 					data = data + k +';';
 
 					if (i < 0) i = k;
+
+					
 				}
 			
 			} 
@@ -102,6 +149,7 @@
 			<strong>Info!</strong> Select upto three elements.
 		  </div>
 		<div id="succeess" class="alert alert-success" role="alert" style="display:none;"></div>
+		
 		<!--<h3>Select upto three Elements</h3>--></center>
 		<table id="unchk" >
 		  <tbody>
