--- a/templates/layout.html
+++ b/templates/layout.html
@@ -72,13 +72,16 @@
           <div class="collapse navbar-collapse" id="navbarToggle">
             <div class="navbar-nav mr-auto">
               <a class="nav-item nav-link" href="/">Home</a>
-              <a class="nav-item nav-link" href="/blog">Blog</a>
+              <a class="nav-item nav-link" href="http://www.materialsinformatics.org/data/">Data</a>
+              <a class="nav-item nav-link" href="http://www.materialsinformatics.org/blogs/">Blog</a>
+              <a class="nav-item nav-link" href="http://www.materialsinformatics.org/resources/">Resources</a>
+              <a class="nav-item nav-link" href="http://www.materialsinformatics.org/forum/">Forum</a>
               <a class="nav-item nav-link" href="/about">Team</a>
             </div>
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
-              <a class="nav-item nav-link" href="/login">Login</a>
-              <a class="nav-item nav-link" href="/register">Register</a>
+              <a class="nav-item nav-link" href="http://www.materialsinformatics.org/signin/">Login</a>
+              <a class="nav-item nav-link" href="http://www.materialsinformatics.org/register/">Register</a>
             </div>
           </div>
         </div>
