--- a/imagenflask/templates/layout.html
+++ b/imagenflask/templates/layout.html
@@ -72,15 +72,17 @@
           <div class="collapse navbar-collapse" id="navbarToggle">
             <div class="navbar-nav mr-auto">
               <a class="nav-item nav-link" href="{{ url_for('home') }}">Home</a>
-              <a class="nav-item nav-link" href="{{ url_for('data') }}">Data</a>
-              <a class="nav-item nav-link" href="{{ url_for('blog') }}">Blog</a>
+              <!--<a class="nav-item nav-link" href="{{ url_for('data') }}">Data</a>
+              -->
               <a class="nav-item nav-link" href="{{ url_for('res') }}">Resources</a>
+              <a class="nav-item nav-link" href="{{ url_for('blog') }}">Blog</a>
               <a class="nav-item nav-link" href="{{ url_for('forum') }}">Forum</a>
               <a class="nav-item nav-link" href="{{ url_for('team') }}">Team</a>
             </div>
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
               {% if current_user.is_authenticated %}
+                <a class="nav-item nav-link" href="{{ url_for('new_post') }}">New Post</a>
                 <a class="nav-item nav-link" href="{{ url_for('account') }}">Account</a>
                 <a class="nav-item nav-link" href="{{ url_for('logout') }}">Logout</a>
               {% else %}
