--- a/imagenflask/templates/forum.html
+++ b/imagenflask/templates/forum.html
@@ -1,7 +1,14 @@
 {% extends "layout.html" %}
 {% block content %}
 	
-		<article class="media content-section">
+	<iframe
+	  src="https://pranoyflask.tribe.so/embed/home?components=feed&feedLimit=10"
+	  frameborder="0"
+	  width="704" height="1500"
+	  style="min-height: 300px; width: 100%;"
+	  allowtransparency="true">
+	</iframe>
+		<!--<article class="media content-section">
 		<iframe width="704" height="400" src="https://www.youtube.com/embed/tElbqV4_IUs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	</article>
 	<article class="media content-section">
@@ -13,16 +20,16 @@
 	<article class="media content-section">
 			<iframe sandbox src="https://www.me.iitb.ac.in/~alankar/publications.html" allowfullscreen="" title="Embedded post" width="704" height="400" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		</article>
-	
+
 	
 		<article class="media content-section">
-			<iframe src="http://symbianone.com/2020/07/machine-learning-approaches-will-be-ubiquitous-across-chemical-and-materials-companies/" allowfullscreen="" title="Embedded post" width="704" height="400" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			<iframe sandbox src="https://www.linkedin.com/embed/feed/update/urn:li:share:6693748887628390400" allowfullscreen="" title="Embedded post" width="704" height="400" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		</article>
-		<!--<article class="media content-section">
+		<article class="media content-section">
 			<iframe src="https://www.linkedin.com/embed/feed/update/urn:li:share:6479359946197700608" allowfullscreen="" title="Embedded post" width="704" height="400" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		</article>
 		<article class="media content-section">
-			<iframe src="https://www.linkedin.com/posts/edcnitd_for-years-we-have-been-utilizing-the-earths-activity-6693748888786018304-17xD" allowfullscreen="" title="Embedded post" width="704" height="400" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			<iframe src="https://pranoyflask.tribe.so/D" allowfullscreen="" title="Embedded post" width="704" height="400" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		</article>-->
 
 	 
