--- a/imagenflask/templates/layout.html
+++ b/imagenflask/templates/layout.html
@@ -8,6 +8,20 @@
     <meta name="author" content="Pranoy Ray"/>
     <meta name="author" content="Alankar Alankar"/>
     <!--<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='button.css') }}">-->
+
+    <!-- Tribe Tag -->
+    <script>
+      (function(t,r,i,b,e){
+        if(typeof t.Tribe==='function'){t.Tribe('reload',{portal:i});}
+        else{b=function(){b.r(arguments);};b.q=[];b.r=function(args){b.q.push(args);};
+        t.Tribe=b; e=r.createElement('script');e.type='text/javascript';e.async=true;
+        e.src=i+'/widget/v1/main.js?t='+Math.ceil(new Date() / 3e5) * 3e5;
+        var x=r.getElementsByTagName('script')[0];x.parentNode.insertBefore(e,x);
+        t.Tribe('boot',{portal:i});}
+      })(window,document,'https://pranoyflask.tribe.so');
+    </script>
+
+
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
@@ -72,8 +86,7 @@
           <div class="collapse navbar-collapse" id="navbarToggle">
             <div class="navbar-nav mr-auto">
               <a class="nav-item nav-link" href="{{ url_for('home') }}">Home</a>
-              <!--<a class="nav-item nav-link" href="{{ url_for('data') }}">Data</a>
-              -->
+              <a class="nav-item nav-link" href="{{ url_for('data') }}">Data</a>
               <a class="nav-item nav-link" href="{{ url_for('res') }}">Resources</a>
               <a class="nav-item nav-link" href="{{ url_for('blog') }}">Blog</a>
               <a class="nav-item nav-link" href="{{ url_for('forum') }}">Forum</a>
@@ -91,7 +104,7 @@
               {% endif %}
             </div>
           </div>
-        </div>
+        </div> 
       </nav>
     </header>
      <main role="main" class="container">
