--- a/imagenflask/templates/forum.html
+++ b/imagenflask/templates/forum.html
@@ -1,13 +1,49 @@
 {% extends "layout.html" %}
 {% block content %}
-	
-	<iframe
+	<span><iframe id="forum_embed" 
+ src="javascript:void(0)" 
+ scrolling="no" 
+ frameborder="0" 
+ width="704" 
+ height="1500"> 
+</iframe> 
+<script type="text/javascript"> 
+ document.getElementById("forum_embed").src = 
+  "https://groups.google.com/forum/embed/?place=forum/flasktestiitb" 
+  "&amp;showsearch=true&amp;showpopout=true&amp;parenturl=" 
+encodeURIComponent(window.location.href); 
+</script></span>
+	<!--<<div>
+		<iframe id="forum_embed"
+              src="javascript:void(0)"
+              scrolling="no"
+              frameborder="0">
+      </iframe>
+  iframe id="forum_embed"
+        src="javascript:void(0)"
+        scrolling="no"
+        frameborder="0"
+        width="704"
+        height="1000"
+        >
+  </iframe>
+  <script type="text/javascript">
+   document.getElementById('forum_embed').src =
+ 'https://groups.google.com/forum/#!forum/flasktestiitb'
+ + '&showsearch=true&showpopout=true&showtabs=false'
+ + '&parenturl=' + encodeURIComponent(window.location.href);
+  </script>
+  </div>-->
+	<!--<iframe
+
+		https://groups.google.com/forum/#!forum/flasktestiitb
+
 	  src="https://pranoyflask.tribe.so/embed/home?components=feed&feedLimit=10"
 	  frameborder="0"
 	  width="704" height="1500"
-	  style="min-height: 300px; width: 100%;"
+	  style="min-height: 300px; width: 100%;" 
 	  allowtransparency="true">
-	</iframe>
+	</iframe>-->
 		<!--<article class="media content-section">
 		<iframe width="704" height="400" src="https://www.youtube.com/embed/tElbqV4_IUs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	</article>
