--- a/imagenflask/templates/forum.html
+++ b/imagenflask/templates/forum.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block content %}
 	<article class="media content-section">
-		<iframe id="forum_embed"
+		<!--<iframe id="forum_embed"
 		  src="javascript:void(0)"
 		  scrolling="no"
 		  frameborder="0"
@@ -13,8 +13,9 @@
 		     'http://groups.google.com/forum/embed/?place=forum/flasktestiitb/'
 		     + '&showsearch=true&showpopout=true&showtabs=false'
 		     + '&parenturl=' + encodeURIComponent(window.location.href);
-		</script>
+		</script>-->
 
+		<p><iframe border="0" width="704" height="804" src="http://flaskiitbtest.forumotion.com"></iframe></p>
 
 
 		<!--Firefox-->
