--- a/imagenflask/templates/forum.html
+++ b/imagenflask/templates/forum.html
@@ -15,7 +15,7 @@
 		     + '&parenturl=' + encodeURIComponent(window.location.href);
 		</script>-->
 
-		<center><iframe scrolling="no" frameborder="0" width="704" height="804" src="http://flaskiitbtest.forumotion.com"></iframe><</center>
+		<center><iframe scrolling="no" frameborder="0" width="704" height="804" src="http://flaskiitbtest.forumotion.com"></iframe></center>
 
 
 		<!--Firefox-->
