--- a/imagenflask/templates/register.html
+++ b/imagenflask/templates/register.html
@@ -4,7 +4,7 @@
         <form method="POST" action="">
             {{ form.hidden_tag() }}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Join Today</legend>
+                <legend class="border-bottom mb-4">Join the Materials Informatics community Today!</legend>
                 <div class="form-group">
                     {{ form.username.label(class="form-control-label") }}
 
@@ -30,6 +30,19 @@
                         </div>
                     {% else %}
                         {{ form.email(class="form-control form-control-lg") }}
+                    {% endif %}
+                </div>
+                <div class="form-group">
+                    {{ form.affiliation.label(class="form-control-label") }}
+                    {% if form.affiliation.errors %}
+                        {{ form.affiliation(class="form-control form-control-lg is-invalid") }}
+                        <div class="invalid-feedback">
+                            {% for error in form.affiliation.errors %}
+                                <span>{{ error }}</span>
+                            {% endfor %}
+                        </div>
+                    {% else %}
+                        {{ form.affiliation(class="form-control form-control-lg") }}
                     {% endif %}
                 </div>
                 <div class="form-group">
