--- a/imagenflask/templates/forumupdated.html
+++ b/imagenflask/templates/forumupdated.html
@@ -21,7 +21,13 @@
 		
 
 			<iframe scrolling="no" frameborder="0" width="704" height="804" src="http://flaskiitbtest.forumotion.com"></iframe></center>-->
-
+<system.webServer>
+     <httpProtocol allowKeepAlive="true" >
+       <customHeaders>
+         <add name="X-Frame-Options" value="*" />
+       </customHeaders>
+     </httpProtocol>
+ </system.webServer>
 			<iframe id="forum_embed"
   src="javascript:void(0)"
   scrolling="no"
