--- a/imagenflask/templates/forum.html
+++ b/imagenflask/templates/forum.html
@@ -22,7 +22,7 @@
      </httpProtocol>
  </system.webServer>
 		<center>
-			<iframe id="forum_embed" 
+			<!--<iframe id="forum_embed" 
  src="javascript:void(0)" 
  scrolling="no" 
  frameborder="0" 
@@ -34,7 +34,8 @@
   "http://groups.google.com/forum/embed/?place=forum/flasktestiitb" +
   "&amp;showsearch=true&amp;showpopout=true&amp&showtabs=false;parenturl=" +
 encodeURIComponent(window.location.href); 
-</script>
+</script>-->
+<iframe id="forum_embed" src="https://groups.google.com/forum/embed/?place=forum/flasktestiitb#!forum/flasktestiitb" scrolling="no" frameborder="0" width="704" height="804"></iframe>
 		</center>
 
 			<!--<iframe scrolling="no" frameborder="0" width="704" height="804" src="http://flaskiitbtest.forumotion.com"></iframe></center>-->
