--- a/imagenflask/templates/res.html
+++ b/imagenflask/templates/res.html
@@ -1,23 +1,44 @@
 {% extends "layout.html" %}
 {% block content %}
-	
+	<table class="">
+		<tr>
+			<td>
 		<article class="media content-section">
-		<iframe width="704" height="400" src="https://www.youtube.com/embed/tElbqV4_IUs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		<iframe width="332" height="200" src="https://www.youtube.com/embed/tElbqV4_IUs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	</article>
+</td>
+	<td>
 	<article class="media content-section">
-	<iframe width="704" height="400" src="https://www.youtube.com/embed/XidWMz3z7I4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+	<iframe width="332" height="200" src="https://www.youtube.com/embed/XidWMz3z7I4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	</article>
+</td>
+</tr>
+<tr>
+	<td>
 		<article class="media content-section">
-		<iframe width="704" height="400" src="https://www.youtube.com/embed/saeFQNThCGQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		<iframe width="332" height="200" src="https://www.youtube.com/embed/saeFQNThCGQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	</article>
+</td>
+<td>
 	<article class="media content-section">
-			<iframe sandbox src="https://www.me.iitb.ac.in/~alankar/publications.html" allowfullscreen="" title="Embedded post" width="704" height="400" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		<iframe width="332" height="200" src="https://www.youtube.com/embed/u5qFwTdf4xM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			
 		</article>
-	
-	
+</td>
+</tr>
+<tr>
+	<td>
 		<article class="media content-section">
-			<iframe src="http://symbianone.com/2020/07/machine-learning-approaches-will-be-ubiquitous-across-chemical-and-materials-companies/" allowfullscreen="" title="Embedded post" width="704" height="400" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			<iframe src="http://symbianone.com/2020/07/machine-learning-approaches-will-be-ubiquitous-across-chemical-and-materials-companies/" allowfullscreen="" title="Embedded post" width="332" height="200" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		</article>
+	</td>
+	<td>
+		<article class="media content-section">
+		<iframe sandbox src="https://www.me.iitb.ac.in/~alankar/publications.html" allowfullscreen="" title="Embedded post" width="332" height="200" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		</article>
+	</td>
+</tr>
+</table>
 		<!--<article class="media content-section">
 			<iframe src="https://www.linkedin.com/embed/feed/update/urn:li:share:6479359946197700608" allowfullscreen="" title="Embedded post" width="704" height="400" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		</article>
