--- a/imagenflask/templates/res.html
+++ b/imagenflask/templates/res.html
@@ -29,8 +29,7 @@
 <tr>
 	<td>
 		<article class="media content-section">
-			<iframe src="http://symbianone.com/2020/07/machine-learning-approaches-will-be-ubiquitous-across-chemical-and-materials-companies/" allowfullscreen="" title="Embedded post" width="332" height="200" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-		</article>
+			<iframe sandbox src="https://www.me.iitb.ac.in/~alankar/research.html" allowfullscreen="" title="Embedded post" width="332" height="200" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	</td>
 	<td>
 		<article class="media content-section">
