--- a/imagenflask/templates/layout.html
+++ b/imagenflask/templates/layout.html
@@ -142,8 +142,8 @@
             <center><h3>Enquiries & Feedback</h3></center>
             <center><p class='text-muted'>We'd like to  hear from you.
               <ul class="list-group">
+              <li class="list-group-item list-group-item-light"><a href="">Collaborate with us</a></li>
               <li class="list-group-item list-group-item-light"><a href="">Raise a Concern</a></li>
-              <li class="list-group-item list-group-item-light"><a href="">Add more data</a></li>
               <li class="list-group-item list-group-item-light"><a href="">Report Incorrect Data</a></li>
               <li class="list-group-item list-group-item-light"><a href="">Feedback</a></li>
             </ul>
