--- a/imagenflask/templates/data.html
+++ b/imagenflask/templates/data.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block content %}
 <!--<div class="col-md-8">-->
-	<h1>Resources Demo Page</h1>
+	<h1>Data Demo Page</h1>
 	<article class="media content-section">
 	<table style="width:100%">
   	<tr>
