--- a/imagenflask/templates/account.html
+++ b/imagenflask/templates/account.html
@@ -4,9 +4,9 @@
       <div class="media">
         <img class="rounded-circle account-img" src="{{ image_file }}">
         <div class="media-body">
-          <h2 class="account-heading">{{ session.get('username') }}</h2>
-          <h4>{{ session.get('affiliation') }}</h4>
-          <p class="text-secondary">{{ session["email"] }}</p>
+          <h2 class="account-heading">{{ current_user.username }}</h2>
+          <h4>{{ current_user.affiliation }}</h4>
+          <p class="text-secondary">{{ current_user.email }}</p>
         </div>
       </div>
         <form method="POST" action="" enctype="multipart/form-data">
