--- a/imagenflask/templates/blog.html
+++ b/imagenflask/templates/blog.html
@@ -1,33 +1,45 @@
 {% extends "layout.html" %}
 {% block content %}
-    {% for post in posts.items %}
-        <article class="media content-section">
-          <img class="rounded-circle article-img" src="{{ url_for('static', filename='profile_pics/' + post.author.image_file) }}">
-          <div class="media-body">
-            <div class="article-metadata">
-              <a class="mr-2" href="{{ url_for('user_posts', username=post.author.username) }}">{{ post.author.username }}</a>
-              <small><em class="mr-2" href="{{ url_for('user_posts', username=post.author.username) }}">{{ post.author.affiliation }}</em></small>
-              <small class="text-muted">{{ post.date_posted.strftime('%d-%m-%Y') }}</small>
-            </div>
-            <h2><a class="article-title" href="{{ url_for('post', post_id=post.id) }}">{{ post.title }}</a></h2>
-            <p class="article-content">{{ post.content }}</p>
-            <em>
-              <small>The author of this post can be reached at {{ post.author.email }}</small>
-            </em>
-          </div>
-        </article>
-    {% endfor %}
-    <center>
-    {% for page_num in posts.iter_pages(left_edge=1, right_edge=1, left_current=1, right_current=2) %}
-      {% if page_num %}
-        {% if posts.page == page_num %}
-          <a class="btn btn-info mb-4" href="{{ url_for('home', page=page_num) }}">{{ page_num }}</a>
-        {% else %}
-          <a class="btn btn-outline-info mb-4" href="{{ url_for('home', page=page_num) }}">{{ page_num }}</a>
-        {% endif %}
-      {% else %}
-        ...
-      {% endif %}
-    {% endfor %}
-  </center>
+	<!--<div class="col-md-8">-->
+	<!--{% for post in posts%}
+		<article class="media content-section">
+			<img class="rounded-circle article-img" src="{{ url_for('static', filename='profile_pics/' + post.author.image_file) }}">
+		  <div class="media-body">
+		    <div class="article-metadata">
+		      <a class="mr-2" href="#">{{ post.author.username }}</a>
+		      <small class="text-muted">{{ post.date_posted.strftime('%d-%m-%Y') }}</small>
+		    </div>
+		    <h2><a class="article-title" href="{{ url_for('post', post_id=post.id) }}">{{ post.title }}</a></h2>
+		    <p class="article-content">{{ post.content }}</p>
+		  </div>
+		</article>
+	 {% endfor %}-->
+	{% for p in data %}
+        <div class="single">
+            <p class="title">{{p.val().title}}</p>
+            <p>{{p.val().author}}</p>
+
+            <div>{{p.val().content}}</div>
+            
+            {% if session["usr"] %}
+                {% if session["email"] == p.val().author %}
+                <a href="/edit/{{p.key()}}">Edit Post</a>
+                {% endif %}
+            {% endif %}
+
+        </div>
+   	{% endfor %}
+	<!--</div>
+<div class="col-md-4">
+<div class="content-section">
+<center><h3>Enquiries & Feedback</h3></center>
+<center><p class='text-muted'>We'd like to  hear from you.
+  <ul class="list-group">
+    <li class="list-group-item list-group-item-light"><a href="">Raise a Concern</a></li>
+    <li class="list-group-item list-group-item-light"><a href="">Add more data</a></li>
+    <li class="list-group-item list-group-item-light"><a href="">Report Incorrect Data</a></li>
+    <li class="list-group-item list-group-item-light"><a href="">Feedback</a></li>
+  </ul>
+</p></center>
+</div>-->
 {% endblock content %}
