--- a/imagenflask/templates/account.html
+++ b/imagenflask/templates/account.html
@@ -2,7 +2,7 @@
 {% block content %}
     <div class="content-section">
       <div class="media">
-        <img class="rounded-circle account-img" src="{{ image_file }}">
+        <img class="rounded-circle account-img" src="{{ image }}">
         <div class="media-body">
           <h2 class="account-heading">{{ current_user.username }}</h2>
           <h4>{{ current_user.affiliation }}</h4>
