--- a/imagenflask/templates/blog.html
+++ b/imagenflask/templates/blog.html
@@ -1,33 +1,21 @@
 {% extends "layout.html" %}
 {% block content %}
-    {% for post in posts.items %}
+    {% for single in posts %}
         <article class="media content-section">
-          <img class="rounded-circle article-img" src="{{ url_for('static', filename='profile_pics/' + post.author.image_file) }}">
+          <img class="rounded-circle article-img" src="{{ single.avatar }}">
           <div class="media-body">
             <div class="article-metadata">
-              <a class="mr-2" href="{{ url_for('user_posts', username=post.author.username) }}">{{ post.author.username }}</a>
-              <small><em class="mr-2" href="{{ url_for('user_posts', username=post.author.username) }}">{{ post.author.affiliation }}</em></small>
-              <small class="text-muted">{{ post.date_posted.strftime('%d-%m-%Y') }}</small>
+              <a class="mr-2" href="">{{ single.name }}</a>
+              <small><em class="mr-2" href="">{{ single.affiliation }}</em></small>
+              <small class="text-muted">{{ single.timestamp }}</small>
             </div>
-            <h2><a class="article-title" href="{{ url_for('post', post_id=post.id) }}">{{ post.title }}</a></h2>
-            <p class="article-content">{{ post.content }}</p>
+            <h2><a class="article-title" href="{{ url_for('post', post_id=single.id) }}">{{ single.title }}</a></h2>
+            <p class="article-content">{{ single.content }}</p>
             <em>
-              <small>The author of this post can be reached at {{ post.author.email }}</small>
+              <small>The author of this post can be reached at {{ single.email }}</small>
             </em>
           </div>
         </article>
     {% endfor %}
-    <center>
-    {% for page_num in posts.iter_pages(left_edge=1, right_edge=1, left_current=1, right_current=2) %}
-      {% if page_num %}
-        {% if posts.page == page_num %}
-          <a class="btn btn-info mb-4" href="{{ url_for('home', page=page_num) }}">{{ page_num }}</a>
-        {% else %}
-          <a class="btn btn-outline-info mb-4" href="{{ url_for('home', page=page_num) }}">{{ page_num }}</a>
-        {% endif %}
-      {% else %}
-        ...
-      {% endif %}
-    {% endfor %}
-  </center>
+  
 {% endblock content %}
