--- a/imagenflask/templates/home.html
+++ b/imagenflask/templates/home.html
@@ -77,6 +77,8 @@
 				<a class="nav-item nav-link" href="{{ url_for('blog') }}">Blog</a>
 				<a class="nav-item nav-link" href="{{ url_for('forum') }}">Forum</a>
 				<a class="nav-item nav-link" href="{{ url_for('team') }}">Team</a>
+				<a class="nav-item nav-link" href="{{ url_for('news') }}">News</a>
+
 			  </div>
 			  <!-- Navbar Right Side -->
 			  <div class="navbar-nav">
