--- a/imagenflask/templates/news.html
+++ b/imagenflask/templates/news.html
@@ -36,6 +36,50 @@
 <!--<div class="col-md-8">-->
     <!--<h1>NEWS</h1>-->
     <article class="media content-section">
-        <div id="widgetmain" style="text-align:center;overflow-y:auto;overflow-x:hidden;width:704px;background-color:#transparent; border:1px solid #FFFFFF;"><div id="rsswidget" style="height:1500px;"><iframe src="http://us1.rssfeedwidget.com/getrss.php?time=1597700421342&amp;x=http%3A%2F%2Fwww.materialstoday.com%2Frss%2Fcomputation-theory%2Fnews%2F&amp;w=704&amp;h=1500&amp;bc=FFFFFF&amp;bw=1&amp;bgc=transparent&amp;m=5&amp;it=true&amp;t=Around The World&amp;tc=FFFFFF&amp;ts=25&amp;tb=1472C9&amp;il=true&amp;lc=0000FF&amp;ls=14&amp;lb=true&amp;id=true&amp;dc=333333&amp;ds=14&amp;idt=true&amp;dtc=284F2D&amp;dts=12" border="0" hspace="0" vspace="0" marginwidth="0" marginheight="0" style="border:0; padding:0; margin:0; width:704px; height:1500px;" id="rssOutput" frameborder="no">Reading RSS Feed ...</iframe></div><div style="text-align:right;margin-bottom:0;border-top:1px solid #FFFFFF;" id="widgetbottom"><span style="font-size:70%"><a href="http://www.rssfeedwidget.com">rss feed widget</a>&nbsp;</span><br></div></div>
+<!-- start sw-rss-feed code --> 
+<script type="text/javascript"> 
+  <!-- 
+  rssfeed_url = new Array(); 
+  rssfeed_url[0]="http://www.materialstoday.com/rss/computation-theory/news/"; rssfeed_url[1]="http://news.mit.edu/rss/topic/materials-science-and-engineering";  
+  rssfeed_frame_width="5004"; 
+  rssfeed_frame_height="1000"; 
+  rssfeed_scroll="on"; 
+  rssfeed_scroll_step="6"; 
+  rssfeed_scroll_bar="off"; 
+  rssfeed_target="_blank"; 
+  rssfeed_font_size="12"; 
+  rssfeed_font_face=""; 
+  rssfeed_border="on"; 
+  rssfeed_css_url=""; 
+  rssfeed_title="on"; 
+  rssfeed_title_name="Around the World"; 
+  rssfeed_title_bgcolor="#55a0ff"; 
+  rssfeed_title_color="#fff"; 
+  rssfeed_title_bgimage=""; 
+  rssfeed_footer="off"; 
+  rssfeed_footer_name="rss feed"; 
+  rssfeed_footer_bgcolor="#fff"; 
+  rssfeed_footer_color="#333"; 
+  rssfeed_footer_bgimage=""; 
+  rssfeed_item_title_length="100"; 
+  rssfeed_item_title_color="#55a0ff"; 
+  rssfeed_item_bgcolor="#fff"; 
+  rssfeed_item_bgimage=""; 
+  rssfeed_item_border_bottom="on"; 
+  rssfeed_item_source_icon="off"; 
+  rssfeed_item_date="on"; 
+  rssfeed_item_description="on"; 
+  rssfeed_item_description_length="120"; 
+  rssfeed_item_description_color="#666"; 
+  rssfeed_item_description_link_color="#99cc00"; 
+  rssfeed_item_description_tag="on"; 
+  rssfeed_no_items="20"; 
+  rssfeed_cache = "584b17f2e14d1a2bbc58e7c350055428"; 
+  //--> 
+  </script> 
+  <script type="text/javascript" src="//feed.surfing-waves.com/js/rss-feed.js"></script> 
+  <!-- The link below helps keep this service FREE, and helps other people find the SW widget. Please be cool and keep it! Thanks. --> 
+  <br>
+ 
     </article>
    {% endblock content %}
