--- a/imagenflask/templates/news.html
+++ b/imagenflask/templates/news.html
@@ -33,14 +33,14 @@
       </div> 
     </nav>
   </header>
-<!--<div class="col-md-8">--  http://www.materialstoday.com/rss/computation-theory/news/.  ---- rssfeed_url[1]="";  http://news.mit.edu/rss/topic/materials-science-and-engineering   -->
+<!--<div class="col-md-8">-->
     <!--<h1>NEWS</h1>-->
     <article class="media content-section">
 <!-- start sw-rss-feed code --> 
 <script type="text/javascript"> 
   <!-- 
   rssfeed_url = new Array(); 
-  rssfeed_url[0]="https://siftrss.com/f/m0Jq9pKWDB";  
+  rssfeed_url[0]="https://siftrss.com/f/m0Jq9pKWDB"; rssfeed_url[1]="https://siftrss.com/f/QD5g8ZVa1K"; rssfeed_url[2]="https://siftrss.com/f/0beX3KYN9w"; rssfeed_url[3]="https://siftrss.com/f/75LAjwDM38"; 
   rssfeed_frame_width="5004"; 
   rssfeed_frame_height="1000"; 
   rssfeed_scroll="on"; 
